Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-745

Segfault in avro_{bytes,sting,fixed}_set

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.5.0
    • c
    • None

    Description

      The avro_bytes_set function (and its string and fixed counterparts) are supposed to save a copy of the value, which the avro_datum_t instance takes full control over. Unfortunately, we were making that copy but then saving the original pointer, which would lead to a segfault when freeing the datum. Whoops...

      Attachments

        Activity

          People

            dcreager Douglas Creager
            dcreager Douglas Creager
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: