AVRO-745. Fixed memory bug in bytes/string/fixed values.

The avro_bytes_set function (and its string and fixed counterparts) are
supposed to save a copy of the value, which the avro_datum_t instance
takes full control over.  Unfortunately, we were making that copy but
then saving the original pointer, which would lead to a segfault when
freeing the datum.  Whoops...

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1062872 13f79535-47bb-0310-9956-ffa450edef68